# rust_core_test

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  del.py  main.py  pyproject.toml
.zed/: settings.json
cpp/: demo.cc
examples/: main.cpp  main.py  main.rs
include/cr_core/: demo.h
interop_test/: .gitignore  Cargo.toml  README.md  cpp_demo.py  main.py  pyproject.toml
interop_test/cpp_consumer/: CMakeLists.txt  pyproject.toml
interop_test/cpp_consumer/src/: bindings.cpp  cpp_consumer.cpp  logic.cpp  logic.h
interop_test/rust_consumer/: Cargo.toml  pyproject.toml  rust_consumer.pyi
interop_test/rust_consumer/src/: lib.rs
python/cr_core/: __init__.py  cr_core.pyi
src/: lib.rs
src/bindings/: cpp.rs  mod.rs  pyref.rs  python.rs
