[package]
name = "cr_core"
version = "0.1.0"
edition = "2024"

[lib]
# rlib: normal Rust use + `cargo test`. cdylib: Python extension (maturin).
# staticlib: link the core into a standalone C++ application.
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
pyo3 = { version = "0.29.0", optional = true, features = ["experimental-inspect"] }
cxx = { version = "1.0", optional = true }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }

[features]
python = ["dep:pyo3"]
cpp = ["dep:cxx", "dep:cxx-build"]
