[package]
name = "cr_core"
version = "0.1.0"
edition = "2024"

[lib]
# rlib: normal Rust use + `cargo test`. cdylib: Python extension (maturin).
# staticlib: link the core into a standalone C++ application.
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "main"
path = "examples/main.rs"

[dependencies]
pyo3 = { version = "0.29.0", optional = true, features = ["experimental-inspect"] }
# Non-optional: the cxx bridge holds the canonical data structures (single source
# of truth), so they must exist in every build. The `cxx` crate is pure Rust — it
# does NOT pull in a C++ compiler; only the `cpp` feature (cxx-build) does that.
cxx = "1.0"

[build-dependencies]
cxx-build = { version = "1.0", optional = true }

[features]
# Producer: builds the `cr_core` Python extension module (pyclasses + capsules).
python = ["dep:pyo3"]
# Consumer: reusable zero-copy borrow types (PointRef, …) for *other* PyO3
# extensions that want to read cr_core objects. No #[pymodule], just the helpers.
pyref = ["dep:pyo3"]
# Only gates compiling/linking the C++ side (cxx-build + the `extern "C++"` demo).
cpp = ["dep:cxx-build"]
