[package]
name = "rust_consumer"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_consumer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
# THE core crate (rust_core_test). `pyref` provides the reusable zero-copy borrow
# types (PointRef, …) — this crate adds no FFI plumbing of its own.
cr_core = { path = "../..", features = ["pyref"] }
