[project]
name = "rust_consumer"
version = "0.1.0"
description = "Separate PyO3 extension that borrows cr_core objects zero-copy."
requires-python = ">=3.13"

[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "rust_consumer"
# A top-level `rust_consumer.pyi` next to pyproject is shipped beside the extension.
# Regenerate with: maturin generate-stubs --out .
